Prepares both plugins for 2023.1